[package]
name = "docker-source-checksum"
version = "0.1.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
description = "Deterministic source-based docker image checksum"
documentation = "https://docs.rs/docker-source-checksum"
repository = "https://github.com/docker-source-checksum-dev/cargo-docker-source-checksum"
homepage = "https://github.com/docker-source-checksum-dev/cargo-docker-source-checksum"
keywords = ["docker", "dockerfile", "tool", "checksum"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
common_failures = "0.1"
structopt = "0.3"
env_logger = { version = "0.6.2", default-features = false, features = []}
log = "*"
crev-recursive-digest = { version = "0.2.1" }
glob = "0.3"
blake2 = "0.8"
base64 = "0.11"
digest = "0.8"
hex = "0.3"

